avoid flash of invisible text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
         url('../public/fonts/mona-sans/MonaSans.woff2') format('woff2-variations');
         font-weight: 200 900;
         font-stretch: 75% 125%;
+        font-display: swap;
     }
     @font-face {
         font-family: 'Hubot Sans';
@@ -16,6 +17,7 @@
         url('../public/fonts/hubot-sans/hubot-sans.woff2') format('woff2-variations');
         font-weight: 200 900;
         font-stretch: 75% 125%;
+        font-display: swap;
     }
     html {
         font-family: "Mona Sans";
